# ml-project-template

./: .gitignore  MLproject  Readme.md  dataset.conf.yaml  gan_train.py  model.conf.yaml  mypy.ini  params.conf.yaml  params.yaml  params_resnet29_cifar100.yaml  preprocess.conf.yaml  pyproject.toml  run_grid_search.py  run_once.py  tox.ini  train.py
dataset/: base.py  cifar10.py  cifar100.py  imdb.py  mixup.py  mnist.py  mnist_from_raw.py  mscoco.py  open_images.py  ptb.py
dataset/utils/: multiprocess.py
model/: base.py  cnn.py  efficientnet.py  fcnn.py  gan.py  pspnet.py  resnet.py  resnet101.py  rnnlm.py  se_block.py  yolo.py
model/utils/: __init__.py  losses.py
projects/: base.py  data.py  run_once.py
projects/utils/: mlflow_utils.py  python_utils.py
runner/: base.py  image_recognition_trainer.py  image_segmentation_evaluator.py  image_segmentation_trainer.py  language_model_trainer.py  object_detection_trainer.py  utils.py
scripts/: delete_task.py
tests/: test_directory_seg_dataset.py  test_efficientnet.py  test_fcnn.py  test_image_recognition_trainer.py  test_language_model_trainer.py  test_masked_sce.py  test_mixup.py  test_model_base.py  test_mscoco.py  test_mutliprocess_map.py  test_object_detection_trainer.py  test_open_images.py  test_projectbase.py  test_projects_data.py  test_pspnet.py  test_ptb_dataset.py  test_resnet.py  test_rnnlm.py  test_run_once_project.py  test_se_block.py  test_yolo.py
tests/data/mscoco/: annotations.json
tests/data/ptb/: ptb.valid.txt
tests/utils/: dummy_dataset.py  dummy_schedular.py
(+1 files in other folders)
